--- a/project/templates/project/delete_traveler_form.html
+++ b/project/templates/project/delete_traveler_form.html
@@ -1,3 +1,9 @@
+<!-- 
+File: project/delete_traveler_form.html
+Author: Aaron Huang (ahuan@bu.edu), 11/25/2025
+Description: Confirmation form for deleting a traveler profile.
+ -->
+
 {% extends 'project/base.html' %}
 
 {% block content %}
