--- a/project/templates/project/login.html
+++ b/project/templates/project/login.html
@@ -1,16 +1,36 @@
+<!-- 
+File: project/login.html
+Author: Aaron Huang (ahuan@bu.edu), 12/07/2025
+Description: Login form for travelers to sign in and continue to their trips.
+ -->
+
 {% extends 'project/base.html' %}
 {% block content %}
-<a href="">Back</a>
-<div class="centerwrapper">
-    <p>Welcome Back</p>
-    <p>Log in to your account</p>
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        {{form}}
-        <input type="submit" value="login">
-        <input type="hidden" name="next" value="{% url 'travelers' %}">
-    </form>
-    <p>Don't have an account? <a href="{% url 'signup' %}">Sign Up</a></p>
+<div class="center-layout position-relative">
+    <a class="back-link d-inline-flex align-items-center" href="{% url 'homepage' %}">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" class="me-1" aria-hidden="true">
+            <path fill-rule="evenodd" d="M15 8a.5.5 0 0 1-.5.5H2.707l3.147 3.146a.5.5 0 0 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 7.5H14.5A.5.5 0 0 1 15 8z"/>
+        </svg>
+        <span>Back</span>
+    </a>
+    <div class="centerwrapper">
+        <p class="form-title">Welcome Back</p>
+        <p class="form-subtitle">Log in to your account</p>
+        <form action="{% url 'login' %}" method="post" class="stacked-form">
+            {% csrf_token %}
+            <div class="form-row">
+                <label for="{{ form.username.id_for_label }}">Username</label>
+                {{ form.username }}
+            </div>
+            <div class="form-row">
+                <label for="{{ form.password.id_for_label }}">Password</label>
+                {{ form.password }}
+            </div>
+            <input type="hidden" name="next" value="{% url 'triplist' %}">
+            <button type="submit" class="btn btn-dark w-100">Log In</button>
+        </form>
+        <p class="form-footer">Don't have an account? <a href="{% url 'signup' %}">Sign Up</a></p>
+    </div>
 </div>
 
 {% endblock %}
