--- a/project/templates/project/show_traveler.html
+++ b/project/templates/project/show_traveler.html
@@ -1,3 +1,9 @@
+<!-- 
+File: project/show_traveler.html
+Author: Aaron Huang (ahuan@bu.edu), 11/25/2025
+Description: Detail view for a traveler profile with navigation to trips.
+ -->
+
 {% extends 'project/base.html' %}
 
 {% block content %}
