--- a/project/templates/project/update_traveler_form.html
+++ b/project/templates/project/update_traveler_form.html
@@ -1,3 +1,9 @@
+<!-- 
+File: project/update_traveler_form.html
+Author: Aaron Huang (ahuan@bu.edu), 11/23/2025
+Description: Form template for editing an existing traveler profile.
+ -->
+
 {% extends 'project/base.html' %}
 
 {% block content %}
