--- a/project/templates/project/base.html
+++ b/project/templates/project/base.html
@@ -1,13 +1,17 @@
-
+<!-- 
+File: project/base.html
+Author: Aaron Huang (ahuan@bu.edu), 11/22/2025
+Description: The base.html template provides a common structure for all pages in the application, including a navigation bar and footer.
+ -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href="{% static 'project_styles.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- bootstrap-->
+    <link rel="stylesheet" href="{% static 'project_styles.css' %}">
      
     <title>Document</title>
 </head>
