--- a/project/templates/project/homepage.html
+++ b/project/templates/project/homepage.html
@@ -1,22 +1,30 @@
+<!-- 
+File: project/homepage.html
+Author: Aaron Huang (ahuan@bu.edu), 12/07/2025
+Description: Landing page that greets users and routes them to trips or auth flows.
+ -->
+
 {% extends 'project/base.html' %}
 
 {% block content %}
-<div class="centerwrapper" >
-    <p>Travel Itinerary</p>
-    <p>Plan your perfect journey</p>
-    <div class="line line1"></div>
-    <div class="line line2"></div>
-    <div class="line line3"></div>
+<div class="center-layout">
+    <div class="centerwrapper">
+        <p class="form-title">Travel Itinerary</p>
+        <p class="form-subtitle">Plan your perfect journey</p>
+        <div class="line line1"></div>
+        <div class="line line2"></div>
+        <div class="line line3"></div>
     {% if request.user.is_authenticated %}
-        <p>Logged in as: {{request.user}}</p>
-        <a href="{% url 'travelers' %}" class="btn btn-secondary btn-lg" role="button"><p>Continue</p></a>
-        <form action="{% url 'logout' %}" method="POST">
-            {% csrf_token %}
-            <input type="submit" value="Logout" type="button" class="btn btn-secondary btn-lg">
-        </form>
-    {% else %}
-        <a href="{% url 'createtraveler' %}" class="btn btn-dark btn-lg" role="button"><p>Get Started</p></a>
-        <a href="{% url 'login' %}" class="btn btn-light btn-lg" role="button"><p>Log In</p></a>
-    {% endif %}
+            <p>Logged in as: {{request.user}}</p>
+            <a href="{% url 'triplist' %}" class="btn btn-secondary btn-lg" role="button">Continue</a>
+            <form action="{% url 'logout' %}" method="POST">
+                {% csrf_token %}
+                <input type="submit" value="Log Out" type="button" class="btn btn-outline-dark btn-lg">
+            </form>
+        {% else %}
+            <a href="{% url 'createtraveler' %}" class="btn btn-dark btn-lg" role="button">Get Started</a>
+            <a href="{% url 'login' %}" class="btn btn-outline-dark btn-lg" role="button">Log In</a>
+        {% endif %}
+    </div>
 </div>
 {% endblock %}
