--- a/project/templates/project/show_booking.html
+++ b/project/templates/project/show_booking.html
@@ -1,11 +1,65 @@
+<!-- 
+File: project/show_booking.html
+Author: Aaron Huang (ahuan@bu.edu), 12/07/2025
+Description: Booking detail page with trip navigation and edit/delete actions.
+ -->
+
 {% extends 'project/base.html' %}
 
 {% block content %}
+<div class="container py-3 page-section">
+    <div class="panel p-3 mb-3">
+        <a class="text-secondary text-decoration-none d-inline-flex align-items-center gap-2 small mb-2" href="{% url 'tripdetail' booking.stop.trip.pk %}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true">
+                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 1-.5.5H2.707l3.147 3.146a.5.5 0 0 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 7.5H14.5A.5.5 0 0 1 15 8z"/>
+            </svg>
+            <span>Back</span>
+        </a>
+        <div class="d-flex justify-content-between align-items-center">
+            <p class="fw-semibold fs-4 text-body mb-0">{{ booking.type }}</p>
+            <div class="d-flex gap-2">
+                <a class="btn btn-outline-secondary" href="{% url 'updatebooking' booking.pk %}">Edit</a>
+                <a class="btn btn-outline-secondary" href="{% url 'deletebooking' booking.pk %}">Delete</a>
+            </div>
+        </div>
+    </div>
 
-<p>{{booking.stop}}</p>
-<p>{{booking.type}}</p>
-<p>{{booking.confirmationcode}}</p>
-<p>{{booking.price}}</p>
-<p>{{booking.date}}</p>
+    <div class="d-flex flex-column gap-3">
+        <div class="panel p-3">
+            <p class="text-body mb-2">Stop</p>
+            <div class="d-flex align-items-center gap-2 fw-semibold text-body">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true">
+                    <path d="M8 0a5 5 0 0 0-5 5c0 4.05 5 11 5 11s5-6.95 5-11a5 5 0 0 0-5-5m0 7a2 2 0 1 1 0-4 2 2 0 0 1 0 4"/>
+                </svg>
+                <span>{{ booking.stop.stop|default:"No stop set" }}</span>
+            </div>
+        </div>
 
+        <div class="panel p-3">
+            <p class="text-body mb-2">Date</p>
+            <div class="d-flex align-items-center gap-2 fw-semibold text-body">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true">
+                    <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1.5A1.5 1.5 0 0 1 16 2.5v11A1.5 1.5 0 0 1 14.5 15h-13A1.5 1.5 0 0 1 0 13.5v-11A1.5 1.5 0 0 1 1.5 1H3V.5a.5.5 0 0 1 .5-.5zM1.5 2A.5.5 0 0 0 1 2.5V4h14V2.5a.5.5 0 0 0-.5-.5H13V3a.5.5 0 0 1-1 0v-.5H4V3a.5.5 0 0 1-1 0v-.5H1.5z"/>
+                    <path d="M2.5 7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1A.5.5 0 0 1 2.5 8zM5.5 7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1A.5.5 0 0 1 5.5 8zM8.5 7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1A.5.5 0 0 1 8.5 8zM11.5 7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zM2.5 10a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zM5.5 10a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zM8.5 10a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5z"/>
+                </svg>
+                <span>{{ booking.date|default:"No date set" }}</span>
+            </div>
+        </div>
+
+        <div class="panel p-3">
+            <p class="text-body mb-2">Price</p>
+            <div class="d-flex align-items-center gap-2 fw-semibold text-body">
+                <span class="fw-semibold">$</span>
+                <span>{% if booking.price %}{{ booking.price }}{% else %}No price set{% endif %}</span>
+            </div>
+        </div>
+
+        <div class="panel p-3">
+            <p class="text-body mb-2">Confirmation Code</p>
+            <div class="text-body fw-semibold">
+                {% if booking.confirmationcode %}{{ booking.confirmationcode }}{% else %}No code{% endif %}
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
